# ev-infrastructure-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyrightconfig.json  render.yaml  skills-lock.json
.claude/: settings.json
.claude/agents/: coursework-editor.md  debugger.md  devops.md  frontend.md  mcdm-verifier.md  tester.md
.claude/coursework-docx-build/: SKILL.md
.claude/coursework-docx-build/references/: known-gotchas.md  pipeline-detail.md
.claude/coursework-formatting/: SKILL.md
.claude/coursework-formatting/references/: figures_tables_formulas.md  references_appendices.md  text_lists_citations.md
.claude/coursework-structure/: SKILL.md
.claude/coursework-structure/references/: chapter2_design.md  chapter3_and_conclusions.md  intro_and_chapter1.md
.claude/skills/: .gitignore
.claude/skills/coursework-docx-build/: SKILL.md
.claude/skills/coursework-docx-build/references/: known-gotchas.md  pipeline-detail.md
.claude/skills/engineering-architecture/: SKILL.md
.claude/skills/engineering-code-review/: SKILL.md
.claude/skills/engineering-debug/: SKILL.md
.claude/skills/engineering-documentation/: SKILL.md
.claude/skills/engineering-system-design/: SKILL.md
.claude/skills/engineering-testing-strategy/: SKILL.md
.github/workflows/: ci.yml
app/backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml  start.sh
app/backend/api/: criteria.py  deps.py  evaluations.py  locations.py  profiles.py
app/backend/core/: config.py
app/backend/db/: README.md  defaults.py  seed.py  seed_cli.py  session.py
app/backend/db/data/: decision_matrix.csv
app/backend/db/migrations/: env.py
app/backend/db/migrations/versions/: 0003_align_with_chapter2.py  0004_rename_dm_profiles.py  0005_evaluation_weights_fuzzy.py  209b1504f634_initial_schema.py  96c6c1f381ec_decision_matrix.py
app/backend/db/models/: __init__.py  decision_matrix.py  evaluation.py  location.py  profile.py
app/backend/mcdm/: fahp.py  monte_carlo.py  normalize.py  topsis.py
app/backend/mcdm/tests/: test_fahp.py  test_normalize.py  test_sensitivity.py  test_topsis.py
app/backend/schemas/: __init__.py  base.py  comparison.py  evaluation.py  location.py  profile.py  sensitivity.py
app/backend/services/: __init__.py  comparison_service.py  evaluation_service.py  profile_comparison_service.py  repository.py  sensitivity_service.py
app/backend/tests/: conftest.py  test_api_comparison_export.py  test_api_evaluations.py  test_api_locations.py  test_api_profile_comparison.py  test_api_profiles.py  test_api_routes.py  test_comparison_service.py  test_config.py  test_db_models.py  test_defaults.py  test_deps.py  test_schemas.py  test_seed.py  test_services.py
app/frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
app/frontend/src/: App.tsx  main.tsx  test-setup.ts
app/frontend/src/components/: ErrorBoundary.tsx
app/frontend/src/lib/: api.test.ts  api.ts  nivo-theme.ts  query-client.ts  rank-tier.ts
app/frontend/src/pages/: CalculatePage.tsx  ComparisonPage.tsx  DetailsPage.tsx  HomePage.tsx  MapPage.tsx  ProfilesPage.tsx  ResultsPage.tsx  SensitivityPage.tsx  WorkbenchPage.tsx
app/frontend/src/store/: evaluations-history.test.ts  evaluations-history.ts  profile-store.test.ts  profile-store.ts  role-store.ts  session-store.test.ts  session-store.ts  ui-store.ts
app/frontend/src/types/: api.d.ts
app/frontend/tests/e2e/: calculate-flow.spec.ts  comparison-export.spec.ts  helpers.ts
docs/: DEPLOYMENT.md  UI_PLAN.md  bibliography.md  bibliography_from_coursework.md  zmist_kursovoi.md  ІНСТРУКЦІЇ_ДІАГРАМ.md  ВИМОГИ_ОФОРМЛЕННЯ_ДОКУМЕНТА.md  СТРУКТУРА_КУРСОВОЇ.md  висновки.md  вступ.md  список_джерел.md
docs/.tmp.driveupload/: 15458
docs/adr/: 0001-fahp-topsis-intermediates-exposure.md  0002-chang-to-buckley-fahp.md
docs/appendices/: appendix_a.md  appendix_b.md  appendix_g.md
docs/audit/: 2026-05-27-discrepancies.md  2026-05-27-formulas-snapshot.md  2026-05-27-report.md
docs/chapter1/: 1_1_1.md  1_1_2.md  1_1_3.md  1_1_4.md  1_1_5.md  1_2_1.md  1_2_2.md  1_2_3.md  1_2_4.md  1_2_5.md  1_2_6.md  1_2_7.md  1_3.md  plan.md
docs/chapter2/: 2_1_1.md  2_1_2.md  2_1_3.md  2_1_4.md  2_1_5.md  2_1_6.md  2_2_1.md  2_2_2.md  2_2_3.md  2_3_1.md  2_3_2.md  2_3_3.md  2_3_4.md  2_3_5.md  AUDIT_REPORT.md  REDUCTION_PLAN.md  plan.md
docs/chapter2/images/sources/: fig_2_10_general_activity.puml  fig_2_10_monte_carlo_activity.puml  fig_2_10_topsis_activity.puml  fig_2_11_deployment_diagram.puml  fig_2_11_general_activity.puml  fig_2_11_monte_carlo_activity.puml  fig_2_12_deployment_diagram.puml  (+20 more)
docs/chapter3/: 3_1_1.md  3_1_2.md  3_1_3.md  3_1_4.md  3_1_5.md  3_1_6.md  3_1_7.md  3_2.md  3_2_1.md  3_2_2.md  3_2_3.md  3_2_4.md  3_2_5.md  3_2_6.md  3_2_7.md
docs/plans/: plan_agents_skills_cleanup.yaml  plan_audit_2026_05_30.md  plan_chang_to_buckley.yaml  plan_code_techdebt.md  plan_criteria_refactor_report.md  plan_profile_comparison_feature.md
docs/sources/: EV Charging.bib
docs/superpowers/plans/: 2026-05-19-mcdm-core-impl.md
(+110 files in other folders)
