[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ev-charging-dss-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "geoalchemy2>=0.15",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pymcdm>=1.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "testcontainers[postgres]>=4.7",
    "psycopg2-binary>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "db", "schemas", "services", "mcdm"]

[tool.pytest.ini_options]
testpaths = ["mcdm/tests", "tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B"]

[tool.ruff.lint.isort]
known-first-party = ["core", "api", "db", "schemas", "services", "mcdm"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["ANN", "S101", "E501", "E741"]
"tests/*.py" = ["ANN", "S101", "E501", "E741"]
"db/migrations/versions/*.py" = ["E501", "I001", "UP"]
"db/migrations/env.py" = ["ANN401"]
# E741: l/m/u are canonical TFN parameter names from Chang (1996) — keep as-is.
"db/models/profile.py" = ["E741"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "."
